<resources>
    <string name="app_name">Tourist go!</string>
    <string name="version">V0.0.1</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Log in</string>
    <string name="legend_login">Learn chemistry while having fun</string>
    <string name="enter">Enter</string>
    <string name="legend_bottom_account">You do not have an account?</string>
    <string name="create_account">Create account</string>
    <string name="status">Status:</string>
    <string name="first_name">Name</string>
    <string name="last_name">Last name</string>
    <string name="person_data">Person data</string>
    <string name="contact_data">Contact data</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password_repeat">Password Repeat</string>
    <string name="accept_term">I accept terms and conditions.</string>

    <string name="settings">Configuracion</string>
    <string name="language">Idioma</string>
    <string name="contact">Contanto</string>
    <string name="exit">Salir</string>
    <string name="about">Acerca de</string>

    <!-- Name Devs -->
    <string name="dev1">Frank Elizalde</string>
    <string name="dev2">Kerlly Guerrero</string>
    <string name="dev3">Angel Sanchez</string>

    <string name="copy">© 2020 - 2021 Chectm Inc.</string>
    <string name="profession">Profesion: </string>
    <string name="profession_name"> Pre-Ing. en Sistemas</string>
    <string name="icon_dev"></string>

    <string-array name="citys">
        <item>Guayaquil</item>
        <item>Milagro</item>
        <item>Santa Elena</item>
        <item>Guaranda</item>
        <item>Quito</item>
        <item>Ambato</item>
        <item></item>
    </string-array>
    <string-array name="category">
        <item>Location</item>
        <item>Typical Food</item>
    </string-array>
    <string name="date_of_birth">Date of birth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="input_name">Ingrese nombre del lugar</string>
    <string name="input_description">Ingrese descripcion</string>
    <string name="input_img_location">Selecione image</string>
    <string name="google_maps_key">AIzaSyCfkJJCrE6D5__JE87M4PrwS8dvU20uyEI</string>
    <string name="input_latitude">Latitud</string>
    <string name="inout_longitude">Longitud</string>
    <string name="add_publication">Agregar publicacion</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
</resources>