<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/i_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24">
            <menu>
                <item
                    android:id="@+id/i_language"
                    android:icon="@drawable/ic_baseline_language_24"
                    android:title="@string/language">
                </item>
                <item
                    android:id="@+id/i_contact"
                    android:icon="@drawable/ic_baseline_perm_contact_calendar_24"
                    android:title="@string/contact">
                </item>
                <item android:id="@+id/about"
                    android:icon="@drawable/ic_baseline_info_24"
                    android:title="@string/about"/>
            </menu>
    </item>
    <item android:id="@+id/i_exit"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/exit"/>
</menu>