<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegisterItem">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"
            android:text="Registro de publicacion"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="4dp"
                android:hint="@string/input_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_name_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="4dp"
                android:hint="@string/input_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:id="@+id/img_placeholder"
                android:layout_width="170dp"
                android:layout_gravity="center"
                android:layout_height="170dp"
                android:src="@drawable/index"
                android:contentDescription="TODO"
                android:layout_margin="4dp"/>
            <Button
                android:id="@+id/btn_image"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_img_location"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/bottom_custom_border"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:enabled="false"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/input_latitude">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_latitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textSize="10sp"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:enabled="false"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/inout_longitude">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_longitude"
                            android:layout_width="match_parent"
                            android:textSize="10sp"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/btn_location"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:textSize="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Selecione"/>
            </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:orientation="horizontal">
               <Button
                   android:id="@+id/save_register_p"
                   android:layout_margin="2dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/white"
                   android:text="Guardar"
                   android:backgroundTint="@color/teal_700"/>
               <Button
                   android:id="@+id/cancel_register_p"
                   android:layout_margin="2dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/white"
                   android:text="@string/cancel"
                   android:backgroundTint="@color/custom_red"/>
           </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>