<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background="@drawable/gradient_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/btn_back_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="28dp"
            android:padding="0dp"
            android:layout_marginHorizontal="18dp"
            android:background="@color/transparent"
            android:src="@drawable/ic_baseline_arrow_back_ios_white_24"
            android:contentDescription="TODO" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/app_name"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gris"
                android:gravity="center"
                android:text="@string/version"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:src="@drawable/flask"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/gris"
                android:padding="4dp"
                android:text="@string/copy"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="40dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="Desarroladores: "/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_margin="6dp"
                        app:civ_border_color="@color/blue_low"
                        android:src="@drawable/kerlly"
                        app:civ_border_width="2dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/dev2"
                        />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:padding="2dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profession"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profession_name"/>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginVertical="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_margin="6dp"
                        app:civ_border_color="@color/blue_low"
                        android:src="@drawable/frank"
                        app:civ_border_width="2dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:text="@string/dev1"
                        />

                    <View
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:padding="2dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profession"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profession_name"/>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:padding="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_margin="6dp"
                        app:civ_border_color="@color/blue_low"
                        android:src="@drawable/jack"
                        app:civ_border_width="2dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/dev3"
                        />

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:padding="2dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profession"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profession_name"/>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>